--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <input type="number"  required placeholder="Nota da atividade" min="0" max="10">
             <button type="submit">Adicionar +</button>
         </form>
-        <table>
+        <table cellspacing="0">
             <thead>
                 <tr>
                     <th>
@@ -42,7 +42,7 @@
                 <tr>
                     <td>média final</td>
                     <td>7</td>
-                    <td>Aprovado</td>
+                    <td><span class="results">Aprovado</span></td>
                 </tr>
             </tfoot>
         </table>
