--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <img src="./images/logo.png" alt="capelo">
             <h1>Calculadora de médias</h1>
         </header>
-        <form>
-            <input type="text" required placeholder="Nome da atividade"/>
-            <input type="number"  required placeholder="Nota da atividade" min="0" max="10">
+        <form id="form-activity">
+            <input type="text" id="activity-name" required placeholder="Nome da atividade"/>
+            <input type="number" id="activity-note" required placeholder="Nota da atividade" min="0" max="10">
             <button type="submit">Adicionar +</button>
         </form>
         <table cellspacing="0">
@@ -47,5 +47,6 @@
             </tfoot>
         </table>
     </div>
+    <script src="./main.js"></script>
 </body>
 </html>
