--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             <tfoot>
                 <tr>
                     <td>média final</td>
-                    <td>7</td>
-                    <td><span class="results">Aprovado</span></td>
+                    <td id="final-average">—</td>
+                    <td id="final-result">—</td>
                 </tr>
             </tfoot>
         </table>
